# climate_cube_math

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: online-tests.yml  (+1 more)
climate_cube_math/: __init__.py  demo.py
code/: setup.cfg
docs/: api.md  climate_cubes.md  concepts.md  cubeplot_grammar.md  development.md  getting_started.md  index.md  lexcube.md  methods_and_citation.md  ops_io.md  ops_stats.md  ops_transforms.md  pipe_syntax.md  quickstart.md  semantic_variables.md  streaming_large_data.md  streaming_renderer.md  streaming_sources.md  tubes.md  vase_volumes.md  viewer_debug_notes.md  viewers.md  vignette.ipynb  virtual_cubes.md  why_not_xarray.md
examples/: axis_rig_demo.py
notebooks/: annotations_example.ipynb  anomaly_diverging.ipynb  basic_cube.ipynb  faceted_cubes.ipynb  lexcube_example.ipynb  ndvi_sentinel2_lexcube.ipynb
tests/: conftest.py  test_anomalies.py  test_correlation.py  test_cube_viewer_band_dim.py  test_cube_viewer_interactivity.py  test_gridmet_safety.py  test_lexcube_viz.py  test_no_eager_values_in_plotting.py  test_ops_stats_virtual.py  test_piping_verbs.py  test_plot_verb.py  test_plotting_cubeplot.py  test_plotting_facets_export.py  test_plotting_grammar.py  test_prism_loader.py  test_public_api_smoke.py  test_rolling.py  test_sentinel2_online.py  test_sentinel_loader_helper.py  test_spatial.py  test_tails.py  test_tubes.py  test_utils.py  test_vase.py  test_verbs_plot.py  test_verbs_plot_mean.py  test_verbs_tubes.py  test_verbs_vase.py
(+87 files in other folders)
