[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-cube-math"
version = "0.1.0"
description = "Lightweight helpers for demonstrating ruled hull visualizations of climate events."
readme = "README.md"
authors = [{ name = "Project Team" }]
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "shapely",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-git-revision-date-plugin",
    "mkdocs-jupyter",
]

[project.urls]
homepage = "https://github.com/CU-ESIIL/Project_group_OASIS"

[tool.setuptools]
packages = ["climate_cube_math"]
